crates/analyzer/tests/snapshots/errors__call_static_function_without_double_colon.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: Static functions need to be called with `::` not `.`
  ┌─ compile_errors/call_static_function_without_double_colon.fe:7:13
  │
7 │         Bar.call_me()
  │             ^^^^^^^ This is a static function (doesn't take a `self` parameter)
  │
  = Try `Bar::call_me(...)` instead


